--- a/estudiantes/templates/estudiantes/trabajos/detalle.html
+++ b/estudiantes/templates/estudiantes/trabajos/detalle.html
@@ -4,57 +4,121 @@
 {% block title %}{% endblock %}
 
 {% block content %}
-    <div class="row">
-        <div class="col-md-6 offset-md-3 col-sm-12">
+    <div class="row top-buffer">
+        <div class="col-6 offset-3">
             <div class="card">
                 <div class="card-body">
                     <h4 class="card-title">Proyecto: {{ trabajo.nombre_proyecto }}</h4>
                     <h5 class="card-title">Nivel: {{ trabajo.get_programa_display }}</h5>
-                    <table class="table table-bordered">
-                        <tr>
-                            <th>Fecha de Entrega</th>
-                            <td>{{ trabajo.fecha_entrega }}</td>
-                        </tr>
-                        <tr>
-                            <th>Fecha de Sustentacion</th>
-                            <td>{{ trabajo.fecha_sustentacion }}</td>
-                        </tr>
-                        <tr>
-                            <th>Jurado</th>
-                            <td>
-                                <ul>{% for jurado in trabajo.jurados.all %}
-                                    <li>{{ jurado }}</li>{% endfor %}</ul>
-                            </td>
-                        </tr>
-                        <tr>
-                            <th>Nota Adquirida</th>
-                            <td>{{ trabajo.nota }}</td>
-                        </tr>
-                        <tr>
-                            <th>Estudiantes Participantes</th>
-                            <td>
-                                <ul>{% for estudiante in trabajo.estudiantes.all %}
-                                    <li>{{ estudiante }}</li>{% endfor %}</ul>
-                            </td>
-                        </tr>
-                        {% if trabajo.detalle %}
-                            <tr>
-                                <th>Detalle</th>
-                                <td>{{ trabajo.detalle }}</td>
-                            </tr>
+
+
+                    <div class="card-body">
+                        {% if trabajo.estado == 'pendiente' %}
+                            <div class="alert alert-primary" role="alert">
+                                Pendiente Aprobacion de Anteproyecto
+                            </div>
                         {% endif %}
-                        <tr>
-                            <th>Carrera</th>
-                            <td>{{ trabajo.carrera }}</td>
-                        </tr>
-                    </table>
+                        {% if trabajo.estado == 'aprobado' %}
+                            <div class="alert alert-success" role="alert">
+                                Anteproyecto Aprobado
+                            </div>
+                        {% endif %}
+                        {% if trabajo.estado == 'rechazado' %}
+                            <div class="alert alert-danger" role="alert">
+                                Anteproyecto Rechazado
+                            </div>
+                        {% endif %}
+                        <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
+                            <li class="nav-item">
+                                <a class="nav-link active" id="pills-anteproyecto-tab" data-toggle="pill"
+                                   href="#pills-anteproyecto"
+                                   role="tab" aria-controls="pills-anteproyecto" aria-selected="true">Anteproyecto</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" id="pills-trabajo-tab" data-toggle="pill" href="#pills-trabajo"
+                                   role="tab" aria-controls="pills-trabajo" aria-selected="false">Trabajo de
+                                    Graduacion</a>
+                            </li>
+                            <li class="nav-item">
+                        </ul>
+
+
+                        <div class="tab-content" id="pills-tabContent">
+                            <div class="tab-pane fade show active" id="pills-anteproyecto" role="tabpanel"
+                                 aria-labelledby="pills-anteproyecto-tab">
+
+                                <table class="table table-bordered">
+                                    <tr>
+                                        <th>Estudiantes</th>
+                                        <td>
+                                            <ul>{% for estudiante in trabajo.estudiantes.all %}
+                                                <li>{{ estudiante }}</li>{% endfor %}</ul>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <th>Asesor</th>
+                                        <td>
+                                            <ul>
+                                                <li>{{ trabajo.asesor }}</li>
+                                            </ul>
+                                        </td>
+                                    </tr>
+                                </table>
+                            </div>
+
+
+                            <div class="tab-pane fade" id="pills-trabajo" role="tabpanel"
+                                 aria-labelledby="pills-trabajo-tab">
+                                <table class="table table-bordered">
+                                    <tr>
+                                        <th>Fecha de Entrega</th>
+                                        <td>{{ trabajo.fecha_entrega }}</td>
+                                    </tr>
+                                    <tr>
+                                        <th>Fecha de Sustentacion</th>
+                                        <td>{{ trabajo.fecha_sustentacion }}</td>
+                                    </tr>
+                                    <tr>
+                                        <th>Jurado</th>
+                                        <td>
+                                            <ul>{% for jurado in trabajo.jurados.all %}
+                                                <li>{{ jurado }}</li>{% endfor %}</ul>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <th>Nota Adquirida</th>
+                                        <td>{{ trabajo.nota }}</td>
+                                    </tr>
+                                    <tr>
+                                        <th>Estudiantes Participantes</th>
+                                        <td>
+                                            <ul>{% for estudiante in trabajo.estudiantes.all %}
+                                                <li>{{ estudiante }}</li>{% endfor %}</ul>
+                                        </td>
+                                    </tr>
+                                    {% if trabajo.detalle %}
+                                        <tr>
+                                            <th>Detalle</th>
+                                            <td>{{ trabajo.detalle }}</td>
+                                        </tr>
+                                    {% endif %}
+                                    <tr>
+                                        <th>Carrera</th>
+                                        <td>{{ trabajo.carrera }}</td>
+                                    </tr>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <div class="card-footer text-right">
-                    <a class="btn btn-outline-primary" href="#"><i class="fa fa-file"></i> Archivo</a>
-                    <a class="btn btn-outline-info" href="{% url 'estudiante:editar-trabajo' trabajo.pk %}"><i class="fa fa-edit"></i> Editar</a>
+                    <a class="btn btn-outline-primary" href="#"><i class="fa fa-file"></i> Archivo de Anteproyecto</a>
+                    <a class="btn btn-outline-primary" href="#"><i class="fa fa-file"></i> Archivo de Trabajo de
+                        Graduacion</a>
+                    <a class="btn btn-outline-info" href="{% url 'estudiante:editar-trabajo' trabajo.pk %}"><i
+                            class="fa fa-edit"></i> Editar</a>
                 </div>
             </div>
         </div>
-    </div>
     </div>
 {% endblock %}
