--- a/templates/includes/header/partial_admin_utils_dropdown.html
+++ b/templates/includes/header/partial_admin_utils_dropdown.html
@@ -8,6 +8,10 @@
         {% if request.user.is_superuser %}
             <a class="dropdown-item" href="/admin/">Admin</a>
             <div class="dropdown-divider"></div>
+            {% if request.user.is_staff %}
+                <a class="dropdown-item" href="{% url 'solicitud:lista' %}">Solicitudes</a>
+            {% endif %}
+            <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="{% url 'inventario:fabricante-lista' %}">Fabricantes</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="{% url 'inventario:categoria-lista' %}">Categorias</a>
