--- a/actividades/templates/actividades/include/tabla_actividad.html
+++ b/actividades/templates/actividades/include/tabla_actividad.html
@@ -1,5 +1,5 @@
 <div class="table table-responsive">
-    {% if actividad %}
+    {% if actividades %}
         <table class="table" id="actividades">
             <thead>
             <tr>
