--- a/templates/base.html
+++ b/templates/base.html
@@ -69,24 +69,24 @@
     <!-- /Navbar -->
 
     <!-- Content -->
-    <div class="content">
-        {% if messages %}
-            <div class="row">
-                <div class="col-10 offset-1">
-                    {% for message in messages %}
-                        <div class="alert alert-{{ message.tags }} alert-dismissible" role="alert">
-                            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                                <span aria-hidden="true">&times;</span>
-                            </button>
-                            {{ message }}
-                        </div>
-                    {% endfor %}
-                </div>
-            </div>
-        {% endif %}
-    </div>
 
     <div class="container-fluid">
+        <div class="content">
+            {% if messages %}
+                <div class="row">
+                    <div class="col-12">
+                        {% for message in messages %}
+                            <div class="alert alert-{{ message.tags }} alert-dismissible" role="alert">
+                                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                                    <span aria-hidden="true">&times;</span>
+                                </button>
+                                {{ message }}
+                            </div>
+                        {% endfor %}
+                    </div>
+                </div>
+            {% endif %}
+        </div>
         {% block content %}
             <div class="row">
             <div class="col-md-12">
