Agregar pagina con usuarios del demo y reporte de prueba

--- a/templates/includes/header/partial_unidad_dropdown.html
+++ b/templates/includes/header/partial_unidad_dropdown.html
@@ -10,7 +10,7 @@
                href="{% url 'ubicacion:unidad' request.user.perfil.facultad.pk %}"><i class="fas fa-chart-pie"></i> Dashboard</a>
 
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item" href="#"><i class="fas fa-file-alt"></i> Reportes</a>
+                <a class="dropdown-item" href="{% url 'ubicacion:reporte-prueba' %}"><i class="fas fa-file-alt"></i> Reportes</a>
 
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item"
