--- a/perfiles/templates/perfiles/privado.html
+++ b/perfiles/templates/perfiles/privado.html
@@ -4,6 +4,13 @@
     {{ perfil.primer_apellido }}, {{ perfil.primer_nombre }}
 {% endblock title %}
 
+
+{% block head %}
+    <link href="https://cdn.datatables.net/1.10.16/css/jquery.dataTables.min.css" rel="stylesheet">
+    <link href="https://cdn.datatables.net/1.10.16/css/dataTables.bootstrap4.min.css" rel="stylesheet">
+{% endblock %}
+
+
 {% block content %}
     <div class="row">
         <div class="col-md-4">
@@ -72,8 +79,8 @@
                                 </div>
                                 <div class="tab-pane fade" id="v-pills-messages" role="tabpanel"
                                      aria-labelledby="v-pills-messages-tab">
-                                    {% if perfil.usuario.actividades.all.aprobado %}
-                                        <table class="table table-bordered">
+                                    {% if perfil.usuario.actividades.aprobado %}
+                                        <table id="actividades" class="table table-bordered">
                                             <thead>
                                             <tr>
                                                 <th>Nombre de la Actividad</th>
@@ -81,15 +88,19 @@
                                             </tr>
                                             </thead>
                                             <tbody>
-                                            {% for actividad in perfil.usuario.actividades.all.aprobado %}
-                                            <tr>
-                                                <td>{{ actividad.nombre_actividad }}</td>
-                                                <td>{{ actividad.usuario }}</td>
-                                            </tr>
+                                            {% for actividad in perfil.actividades_realizadas %}
+                                                <tr>
+                                                    <td>{{ actividad.nombre_actividad }}</td>
+                                                    <td>{{ actividad.usuario }}</td>
+                                                </tr>
                                             {% endfor %}
                                             </tbody>
                                         </table>
-                                    {% else %}{% endif %}
+                                    {% else %}
+                                        <div class="alert alert-info" role="alert">
+                                            No ha realizado actividades
+                                        </div>
+                                    {% endif %}
                                 </div>
                             </div>
                         </div>
@@ -100,43 +111,15 @@
             </div>
         </div>
     </div>
-    {#    <div class="row">#}
-    {#        <div class="col-12">#}
-    {#            <!-- Introduccion a la persona y datos personales-->#}
-    {#            <div class="card">#}
-    {#                <div class="card-body">#}
-    {#                    {% if perfil.imagen %}#}
-    {#                        <img class="img-fluid " src="{{ perfil.imagen.url }}" alt="Card image cap">#}
-    {#                    {% else %}#}
-    {#                        <img class="img-fluid " src="http://lorempixel.com/400/400/cats/" alt="Card image cap">#}
-    {#                    {% endif %}#}
-    {#                    <hr/>#}
-    {#                    <h5 class="card-title">{{ perfil.primer_apellido }}, {{ perfil.primer_nombre }} |#}
-    {#                        {{ perfil.provincia }}-{{ perfil.clase }}-{{ perfil.tomo }}-{{ perfil.folio }}</h5>#}
-    {#                    <hr/>#}
-    {#                    <ul class="list-group">#}
-    {#                        <li class="list-group-item">Edad: {{ perfil.edad }}</li>#}
-    {#                        <li class="list-group-item">Pais: {{ perfil.get_pais_display }}</li>#}
-    {#                        <li class="list-group-item">Sexo: {{ perfil.get_sexo_display }}</li>#}
-    {#                        <li class="list-group-item">Codigo: {{ perfil.cod_profesor }}</li>#}
-    {#                    </ul>#}
-    {#                    <hr/>#}
-    {#                    <h5 class="card-title">Informacion Institucional</h5>#}
-    {#                    <ul class="list-group">#}
-    {#                        <li class="list-group-item">Fecha de Inicio de Labores: {{ perfil.tiempo_laborado }}</li>#}
-    {#                        <li class="list-group-item">Categoria: {{ perfil.get_categoria_display }}</li>#}
-    {#                        <li class="list-group-item">Sede: {{ perfil.cod_sede }}</li>#}
-    {#                        <li class="list-group-item">Facultad: {{ perfil.cod_facultad }}</li>#}
-    {#                        <li class="list-group-item">Departamento: {{ perfil.cod_escuela }}</li>#}
-    {#                    </ul>#}
-    {#                    </p>#}
-    {#                </div>#}
-    {#            </div>#}
-    {#        </div>#}
-    {#    </div>#}
 {% endblock content %}
 
 
 {% block javascript %}
-
-{% endblock javascript %}
+    <script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
+    <script src="https://cdn.datatables.net/1.10.16/js/dataTables.bootstrap4.min.js"></script>
+    <script>
+        $(document).ready(function () {
+            $('#actividades').DataTable();
+        });
+    </script>
+{% endblock %}
