--- a/templates/base.html
+++ b/templates/base.html
@@ -92,13 +92,15 @@
             <div class="col-md-12">
                 <div class="container jumbo-test">
                     <div class="jumbotron">
-                        <h1 class="display-3">{% block jumbotron-title %}Bienvenido al Sistema
-                            SIGIA!{% endblock %}</h1>
-                        <p class="lead">{% block jumbotron-subtitle %}Lorem Ipsum{% endblock %}</p>
-                        <hr class="my-4">
-                        <p>{% block jumbotron-content %}It uses utility classes for typography and spacing to space
-                            content out within the larger
-                            container.{% endblock %}</p>
+                        <div class="container">
+                            <h1 class="display-3">{% block jumbotron-title %}Bienvenido al Sistema
+                                SIGIA!{% endblock %}</h1>
+                            <p class="lead">{% block jumbotron-subtitle %}Lorem Ipsum{% endblock %}</p>
+                            <hr class="my-4">
+                            <p>{% block jumbotron-content %}It uses utility classes for typography and spacing to space
+                                content out within the larger
+                                container.{% endblock %}</p>
+                        </div>
                     </div>
                 </div>
             </div>
