Corregir jumbotron de nuevo.

--- a/templates/base.html
+++ b/templates/base.html
@@ -92,15 +92,14 @@
             <div class="col-md-12">
                 <div class="container jumbo-test">
                     <div class="jumbotron">
-                        <div class="container">
-                            <h1 class="display-3">{% block jumbotron-title %}Bienvenido al Sistema
-                                SIGIA!{% endblock %}</h1>
-                            <p class="lead">{% block jumbotron-subtitle %}Lorem Ipsum{% endblock %}</p>
-                            <hr class="my-4">
-                            <p>{% block jumbotron-content %}It uses utility classes for typography and spacing to space
-                                content out within the larger
-                                container.{% endblock %}</p>
-                        </div>
+                        <h1 class="display-4">{% block jumbotron-title %}Bienvenido al Sistema
+                            SIGIA!{% endblock %}</h1>
+                        <p class="lead">{% block jumbotron-subtitle %}Lorem Ipsum{% endblock %}</p>
+                        <hr class="my-4">
+                        <p>{% block jumbotron-content %}It uses utility classes for typography and spacing to space
+                            content out within the larger
+                            container.{% endblock %}</p>
+                        <a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
                     </div>
                 </div>
             </div>
