--- a/templates/includes/header/partial_accounts_dropdown.html
+++ b/templates/includes/header/partial_accounts_dropdown.html
@@ -1,22 +1,26 @@
+{% load group_extras %}
 <li class="nav-item dropdown">
 
     <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
        data-toggle="dropdown" aria-haspopup="true"
        aria-expanded="false">
-        {{ request.user.perfil.primer_nombre }} {{ request.user.perfil.primer_apellido }}{% if request.user.is_superuser %}
+        {{ request.user.perfil.primer_nombre }}
+        {{ request.user.perfil.primer_apellido }}{% if request.user.is_superuser %}
             <i class="fas fa-user-plus"></i>{% else %} <i class="fas fa-user-circle"></i>{% endif %}
     </a>
 
     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-        <a class="dropdown-item" href="{% url 'perfil:ver' %}">Perfil</a>
-        <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="{% url 'perfil:editar' %}">Editar Perfil</a>
-        <div class="dropdown-divider"></div>
+        {% if request.user|has_group:"profesores" or request.user.is_staff %}
+            <a class="dropdown-item" href="{% url 'perfil:ver' %}">Perfil</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="{% url 'perfil:editar' %}">Editar Perfil</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="{% url 'actividad:propias' request.user.pk %}">Mis Actividades</a>
+            <div class="dropdown-divider"></div>
+        {% endif %}
         <a class="dropdown-item" href="#"><i class="fas fa-ban"></i> Notificaciones</a>
         <div class="dropdown-divider"></div>
         <a class="dropdown-item" href="{% url 'solicitud:propias' %}">Solicitudes</a>
-        <div class="dropdown-divider"></div>
-        <a class="dropdown-item" href="{% url 'actividad:propias' request.user.pk %}">Mis Actividades</a>
         <div class="dropdown-divider"></div>
         <a class="dropdown-item" href="{% url 'core:cambiar-password' %}">Cambiar Password</a>
         <div class="dropdown-divider"></div>
