--- a/actividades/templates/actividades/propias.html
+++ b/actividades/templates/actividades/propias.html
@@ -24,7 +24,7 @@
                 <div class="card-header">
                     <div class="btn-group" role="group" aria-label="Button group with nested dropdown">
 
-
+                        {% if perms.actividad.add_actividad %}
                         <div class="btn-group" role="group">
                             <button id="btnGroupDrop1" type="button" class="btn btn-outline-primary dropdown-toggle"
                                     data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -45,8 +45,9 @@
                                 <a class="dropdown-item" href="{% url 'actividad:crear-titulo' %}">Titulo</a>
                             </div>
                         </div>
+                        {% endif %}
 
-                        
+
                     </div>
                 </div>
 
