--- a/templates/includes/header/partial_accounts_dropdown.html
+++ b/templates/includes/header/partial_accounts_dropdown.html
@@ -10,7 +10,7 @@
     </a>
 
     <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-        {% if request.user|has_group:"profesores" or request.user.is_staff %}
+        {% if request.user|has_group:"Profesores" or request.user.is_staff %}
             <a class="dropdown-item" href="{% url 'perfil:ver' %}">Perfil</a>
             <div class="dropdown-divider"></div>
             <a class="dropdown-item" href="{% url 'perfil:editar' %}">Editar Perfil</a>
