--- a/core/templates/core/info.html
+++ b/core/templates/core/info.html
@@ -41,8 +41,10 @@
                         para registrar los titulos de los profesores) o distintas categorías y modelos de recursos físicos (necesarias para el inventario).</p>
                     </li>
                 </ul>
+                <div class="card-body">
                 <p class="card-text">El Sistema además contará con un administrador que dará soporte al sistema  y cuya 
                     función es para garantizar la sostenibilidad del sistema.</p>
+                </div>
             </div>
         </div>
     </div>
