--- a/templates/includes/header/partial_unidad_dropdown.html
+++ b/templates/includes/header/partial_unidad_dropdown.html
@@ -15,8 +15,8 @@
 
         {% if perms.ubicacion.ver_facultad %}
         <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="{% url 'ubicacion:reporte-facultad' request.user.perfil.facultad.pk %}"><i
-                    class="fas fa-file-alt"></i> Reportes</a>
+            <a class="dropdown-item" href="{% url 'ubicacion:reporte-facultad' request.user.perfil.facultad.pk %}">
+                <i class="fas fa-file-alt"></i> Reportes</a>
         {% endif %}
 
 
@@ -30,11 +30,11 @@
 
 
         {% if perms.inventario.add_equipo %}
+        <div class="dropdown-divider"></div>
             <a class="dropdown-item"
                href="{% url 'inventario:facultad-equipo' request.user.perfil.facultad.pk %}">Equipos
                 <span
                         class="badge badge-pill badge-primary">{{ request.user.perfil.facultad.equipos.count }}</span></a>
-            <div class="dropdown-divider"></div>
         {% endif %}
 
 
