Archivos de graficas

--- a/ubicacion/templates/ubicacion/escuelainstancia_detail.html
+++ b/ubicacion/templates/ubicacion/escuelainstancia_detail.html
@@ -112,4 +112,8 @@
 {% endblock %}
 
 {% block javascript %}
+    <script src=""></script>
+    <script src=""></script>
+    <script src=""></script>
+    <script src=""></script>
 {% endblock %}
