--- a/ubicacion/templates/ubicacion/sede_detail.html
+++ b/ubicacion/templates/ubicacion/sede_detail.html
@@ -100,7 +100,7 @@
                 </div>
             </div>
         </div>
-        <div class="row top-buffer">
+        <!-- <div class="row top-buffer">
             <div class="col-12">
                 <div class="card">
                     <div class="card-header">
@@ -115,7 +115,7 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
     </div>
 {% endblock %}
 
@@ -271,6 +271,67 @@
             });
 
 
-        }; //End onload
+        }; 
+    </script>
+
+    <script>
+        // function randomRGB() {
+        //     var colores = [];
+        //     var r = Math.floor(Math.random() * 256);
+        //     var g = Math.floor(Math.random() * 256);
+        //     var b = Math.floor(Math.random() * 256);
+        //     colores.push('rgb(' + r + ',' + g + ',' + b + ')');  // Centro
+        //     colores.push('rgba(' + r + ',' + g + ',' + b + ',' + 0.5 + ')'); // Borde
+        //     return colores;
+        // }
+
+        // var chart_data = {};
+        // var etiquetas = [];
+        // var datos = [];
+        // var chartData = {};
+        // var chartDataSet = [];
+        // var ctx = document.getElementById("estudianteChart");
+        // var dataUrl = estudiantectx.getAttribute("data-url");
+
+        // // Adquirir los datos.
+        // $.ajax({
+        //     url: dataUrl,
+        //     type: "GET",
+        //     dataType: 'json',
+        //     success: function(info){
+        //         etiquetas = info["etiquetas"];
+        //         datos = info["datos"];
+        //     }
+        // });
+
+        // // Asignar las etiquetas. Ej. ["Computadoras", "Laptops", "Teclados"]
+        // chart_data["labels"] = etiquetas;
+        // colores = randomRGB();
+        // for(dato in datos){
+        //     dataset = {
+        //         "label": "",
+        //         "data": dato,
+        //         backgroundColor: [colores[0]],
+        //         borderColor: [colores[1]],
+        //         borderWidth: 1
+        //     };
+        //     chartDataSet.push(dataset);
+        // }
+        // chart_data["datasets"] = chartDataSet;
+        // // Crear la grafica
+        // window.myBar = new Chart(ctx, {
+        //     type: "bar",
+        //     data: chartDataSet,
+        //     options: {
+        //         responsive: true,
+        //         legend: {
+        //             position: 'top'
+        //         },
+        //         title: {
+        //             display: true,
+        //             text: ""
+        //         }
+        //     }
+        // });
     </script>
 {% endblock %}
