Implementar grafica de inventario de facultades

--- a/ubicacion/templates/ubicacion/sede_detail.html
+++ b/ubicacion/templates/ubicacion/sede_detail.html
@@ -191,6 +191,11 @@
                             title: {
                                 display: true,
                                 text: 'Estudiantes por Facultad'
+                            },
+                            scales: {
+                                yAxes: [{
+                                    beginAtZero: true
+                                }]
                             }
                         }
                     });
