--- a/ubicacion/templates/ubicacion/facultadinstancia_detail.html
+++ b/ubicacion/templates/ubicacion/facultadinstancia_detail.html
@@ -1,4 +1,5 @@
 {% extends 'base.html' %}
+{% load staticfiles %}
 
 
 {% block title %}
@@ -97,14 +98,14 @@
             </div>
         </div>
 
-        <!--Recursos por tipo / Graficos-->
+        <!--Recursos y Aulas por tipo / Graficos-->
         <div class="row top-buffer">
             <div class="col-md-12">
                 <div class="card-deck">
                     <div class="card">
                         <div class="card-body">
-                            <h5 class="card-title">Recursos por Tipo</h5>
                             <p class="card-text">
+                                <canvas id="recursosChart" data-url="{% url 'ubicacion:recursos-facultad' facultad.pk %}"></canvas>
                             </p>
                         </div>
                     </div>
@@ -122,6 +123,5 @@
 {% endblock %}
 
 {% block javascript %}
-    <script src=""></script>
-    <script src=""></script>
+    <script src="{% static 'ubicacion/js/grafica_facultad_equipos.js' %}"></script>
 {% endblock %}
